--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -13,32 +13,33 @@
     <div id="contain" style="height: 400px;">
         <pre id="editor">
 解释型定义  Sprints
-抹布行为
-新疆问题
-母乳喂养Dash（docx）
-　　Tinywhat
-　　Titholy Kidsuck Manfuck 
-耶稣反射镜
-　　Zelda 记吃不记打 “浊粥bj”市
-　　意识形态刀
-　　宇宙之刃
-珠帘不管宏观钱（女的？吃猪肉 被猪吃灵魂的 what if fusion）
-猪恋不学必失恋 不懂硬伤
-　　The priority is how to deal with and entertain
-Vesaid?=挂面slip of Vesaid!~ zelda 猪?.服务 人学习
 
-被套洋捞
-　　Cause
-　　AEfects by whom
-归类定义H-Π-W Terminology
-超时空传送 chronosphere
-　　Vesaid~ Wesaid Shout Out CrealR~Solid
-　　Semi-Conduct(is dirty = true)
-　　//Cymtical Symte? 赛门铁克
-　　isDirty=宗叫|党派|真|假|是|否
-chronosphere
-Aniduration Anicest(bug) transhuman ketself ?
-　　Anidura balance for 疯阳硼※
+  抹布行为
+  新疆问题
+  母乳喂养Dash（docx）
+　　  Tinywhat
+　　  Titholy Kidsuck Manfuck 
+  耶稣反射镜
+　　  Zelda 记吃不记打 “浊粥bj”市
+　　  意识形态刀
+　　  宇宙之刃
+  珠帘不管宏观钱（女的？吃猪肉 被猪吃灵魂的 what if fusion）
+  猪恋不学必失恋 不懂硬伤
+　　  The priority is how to deal with and entertain
+  Vesaid?=挂面slip of Vesaid!~ zelda 猪?.服务 人学习
+
+  被套洋捞
+　　  Cause
+　　  AEfects by whom
+  归类定义H-Π-W Terminology
+  超时空传送 chronosphere
+　　  Vesaid~ Wesaid Shout Out CrealR~Solid
+　　  Semi-Conduct(is dirty = true)
+　　  //Cymtical Symte? 赛门铁克
+　　  isDirty=宗叫|党派|真|假|是|否
+  chronosphere
+  Aniduration Anicest(bug) transhuman ketself ?
+　　  Anidura balance for 疯阳硼※
 
 动态性定义Dynamic Identical(genetical twin) 
 　　K vos aoz G
@@ -68,8 +69,9 @@ Aniduration Anicest(bug) transhuman ketself ?
 　　
 
 硬物理 动态性定义 不伤感情
-　　参照 [MFS]维金美-Arrange and Beauty.docx
-　　 trannshuman 气人
+  参照 [MFS]维金美-Arrange and Beauty.docx
+  trannshuman 
+  气人
 
 数术语Express※Analytical
 
@@ -94,8 +96,7 @@ HΔW(M&m 宏观和微观 HΦW VesaidΔSolid Focused）
 　　纯地球 过去 现在 未来 
 　　Passθsense(Pythons ed be ing)  present future
 　　Past now will
-　　Was（were） being W ill is going to
-　　
+　　Was（were） being W ill is going to　
 
 SOS	
 	Sprite Of Snake
@@ -106,16 +107,20 @@ SOS
 AOP	
 　　Ancestor Offspring Predator(Predecessors)
 　　百家姓
+AOR
+AOE
 TOP
 　　Time Odimentional Physical
 　　PTO	 (Physical 硬物理）点面 音意
 　　POT
 　　PBC
 　　?Fphysical Biological ?hemical
-　　?※?
 
-　　
 Kaetseof(dynamic?.H.W)
+ COF
+       SelfGet Core-Get Your followers
+          Used to follow one's commend then portalled for reasons
+
 　　? Beat out ae hazard PBC FBC ?
 　　?hronosphere
 PSI 地球上的定义 reminder：Creal
@@ -137,8 +142,8 @@ SelfGet Sefket
 　　阿尔戈斯?ργο?
 　　AExsaiz
 　　“亚哥斯”,或“阿戈斯”。希腊伯罗奔尼撒半岛东北城市，约有5000年的历史。
-Solid-Out	(shape index on earth Anti- ）
-　　
+Solid	(shape index on earth Anti- ）
+　　Auote
 　　SymbolShapeBeauty以人为本（准） 以美为准（本） 阿萨尼亚克维标杆
 　　Solid-Out-Anti-shapetype
 　　Solid-Out-Fusion-?
@@ -168,7 +173,7 @@ KansaiF (是否看见维标准facial and other kingcell(body) part)
 　　　？.能否看见味道 听 嗅 出现错综形状 不符合Solid 的绝对标准
 　　　
 Vesaid (Vesaim~)物理解释 区别于 ?赛瑞尔
-　　Voice Symbolic Dimension 3Dshape  Rigid Body （刚体）
+　　Voice Symbolic Dimension  Shape  Rigid Body （刚体）
 　　声美Individuate Beauty Benchmark
 　　Cenery 分析
 　　W?said  W?sait
@@ -194,8 +199,9 @@ OnceAlways
 
 AJAX Codex
 
-hliGaokter
+hligaokter
 　　henCEnzic kanSzidor CallJuarez
+  henchunzic kanzidor callhorjie
 
 歌德：Gede
       ThransLect.TranizRanket
@@ -203,31 +209,27 @@ hliGaokter
         Geographic.Manchester.Baidu:County^//~郡:因果.忠动(祸澈).冬房(重锅)
     Nick 
     Elante 
-    Rhrea //era
-
-杨明：天抱怨量
-    不是去上
+    Rhrea //era 纪年 公元
+    Wumi
 
 神话 反射 
 小说 色彩 //TitleShot.FirstAnalytical
 传说
-中文术语节点
-  疼合适
-  沃特森 //Watson
-  溪延揭
-  米伊美
+米伊美
    EveVision.SuperFacial
    Intrigue
    Absorb
    Impressed
    like 
     mutually, self felt unmatched heart pain pushed ,coreket
+从附体 方针 到对接术语节点
+  课中机
+  科狼嗬
   烟后忘
     抽完烟以后忘记过程中的点
   拉稀氏
-  课中机
-  科狼嗬
-  脏那
+  脏
+  溪延揭
   替他王
   天几巴
   百灯箱房 拜登相仿
@@ -235,6 +237,13 @@ hliGaokter
   娘炮 
   气华
   林牛克斯
+  扮演者
+  汪阵鱼 淋阵妥套
+  亡胎锅 
+  沃特森 //Watson
+  疼合适
+  仰命：天抱怨量
+    不是去上
 </pre>
 
         <div id="compiler">
