--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -24,7 +24,8 @@
 　　  意识形态刀
 　　  宇宙之刃
   珠帘不管宏观钱（女的？吃猪肉 被猪吃灵魂的 what if fusion）
-  猪恋不学必失恋 不懂硬伤
+    猪恋不学必失恋 不懂硬伤
+    福气流失
 　　  The priority is how to deal with and entertain
   Vesaid?=挂面slip of Vesaid!~ zelda 猪?.服务 人学习
 
@@ -242,6 +243,7 @@ hligaokter
   亡胎锅 
   沃特森 //Watson
   疼合适
+  眉间尺
   仰命：天抱怨量
     不是去上
 </pre>
