--- a/Rastera/asnic/serial/persivision.html
+++ b/Rastera/asnic/serial/persivision.html
@@ -195,7 +195,7 @@ Definition:PointBack.RangeFirst
     干净 知道怎么回事
     界限是 忍过 直道 anemo
     蛇精狠毒 直射镜 反射镜 但是极端干净 概念不同
-狐狸附体跳舞 保家仙 土但是 跳什么舞
+狐狸和希腊附体跳舞 保家仙 土但是 跳什么舞
 
 
 宗教 地理位置 无知与潜移默化影响
