--- a/Rastera/asnic/crealmytth/cos.html
+++ b/Rastera/asnic/crealmytth/cos.html
@@ -5,8 +5,7 @@
     <title>3-磁欧石重感情Ketself</title>
 </head>
 <body>
-<textarea>
-
+<pre>
 ?forceps 2020:8:17 5.4? 附体内Airflead EY?Canyou zsian?iFixed
 //参照interstellar_warcraft.xslx
 //磁欧石 三角毕达哥斯加 Kosin(Since) After Portal?.Ketself
@@ -76,7 +75,6 @@ Namespace ? : ?5仙家,Solid?.Shape?.First Rotating being selected
 　　EndO
 　　
 EndO
-
-</textarea>
+</pre>
 </body>
 </html>
