--- a/Rastera/asnic/crealmytth/titanfalls.html
+++ b/Rastera/asnic/crealmytth/titanfalls.html
@@ -5,7 +5,7 @@
     <title>5-Ͽ泰坦神の陨落</title>
 </head>
 <body>
-<textarea>
+<pre>
 Botᴂ 2018?.6?.15 Ȼ 2020.8.24 Trans-reflectϿ
 
 因此不要不要的酱Titanic和Titans 销魂 淆混
@@ -24,6 +24,6 @@ Get --○۞◎×○◇☯-- anchor
 希特勒 白色苞这(卐> 红河谷 摸着黑过桥 香格里拉 地下婆罗米Branden âryâ Aryan 
 GrandBalance up △Π▲Π{卍( 腥气舔 ~ S 星系 -○۞◎- 星际 
 Trans-reflectϿ
-</textarea>
+</pre>
 </body>
 </html>
