--- a/Rastera/asnic/crealmytth/cfs-facial.html
+++ b/Rastera/asnic/crealmytth/cfs-facial.html
@@ -5,7 +5,7 @@
     <title> 6-亿W年后的星际重逢与融合 洛克梅根 CFS Faical</title>
 </head>
 <body>
-<textarea>
+<pre>
 Ediz1chy 2020/8/23 ＋桌拍卍
 
 CellWyde.Cellivate  
@@ -28,6 +28,6 @@ CellWyde.Cellivate
   Portal
   //嘴 巴 舌 头 喉 咙 （嗓子)牙（齿）嘴唇 (最射后鸭唇 Vesaid anemo AOT AOZ)
 Caitial
-</textarea>
+</pre>
 </body>
 </html>
