--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -37,6 +37,8 @@
   bottom low middle high  buginsect inner-danG^er 
   bottom low middle high work group
   bottom low middle high head&hand off bone Sos white-partial
+  bottom low middle high 
+  bottom low middle high slept-offend
 开始Rast
 
 Napoléon Bonaparte 贵格派 Quicker Quicker
