--- a/Rastera/asnic/arrange-beauty/sexcast.html
+++ b/Rastera/asnic/arrange-beauty/sexcast.html
@@ -8,7 +8,7 @@
 <pre>
 梅洛克
 ♂Atowardz the male
-Absolute神话里的绝对Handsome帅哥少年或梅切尔ketself 无与伦比的平衡trans-female 少年金米ellipse线条肌肉(Surplice拉达曼迪斯的 Legend 如果是丰满肌肉男的话?.不好trans-female)
+Absolute神话里的绝对Handsome帅 少年或梅切尔ketself 无与伦比的平衡trans-female 少年金米ellipse线条肌肉(Surplice拉达曼迪斯的 Legend 如果是丰满肌肉男的话?.不好trans-female)
 
     男人看了：
 　　    Pure HomoJay already had physical contact& responded，what if inpurty after peer at Φ
