--- a/Rastera/asnic/crealmytth/exsaiz.html
+++ b/Rastera/asnic/crealmytth/exsaiz.html
@@ -6,7 +6,7 @@
     <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
 </head>
 <body>
-<textarea>
+<pre>
 ♋木星 木又寸 GθD  巨蟹2020/8/22
 
  空隆 屎 群 足 
@@ -27,12 +27,11 @@ Tombactive 坟墓shape
 
 
 [盖特赛特]Wjcking.Atlantis.LightΦff
-{
     错综 园 交叉
     Pakistan Japan Russia America Europa：
     India
-}
 
-</textarea>
+
+</pre>
 </body>
 </html>
