--- a/Rastera/asnic/crealmytth/surreal.html
+++ b/Rastera/asnic/crealmytth/surreal.html
@@ -6,7 +6,7 @@
     <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
 </head>
 <body>
-<textarea>
+<pre>
 塞卡斯特Surreal ?≈ Soul-Conception of Creal PSI
 
 //牵引性生命形式 索来德space 维赛德place
@@ -47,6 +47,6 @@
 
 Circlent?
 
-</textarea>
+</pre>
 </body>
 </html>
