--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -104,7 +104,7 @@
           Cap.Hat.Cap
   Triagedy.Geosprite.Animals.ShakeLeg.Denmark
 
-  /^卵卯儿叩口卬
+  /^卵卯儿 渡小叩 口卬
   /-
       Hyper 
           hypt.hpyt 
