--- a/Rastera/asnic/rastera/slept-offsive.html
+++ b/Rastera/asnic/rastera/slept-offsive.html
@@ -66,7 +66,7 @@ Wjcking.Geoscript:Linux.Anydrone:Android
       Hip.Linux.SouthPhole.Pengiun.Vesaid.Chinese:Pigu,Pengu.SteellBall.Texture
     Orgis.Testical.Ceiplus.String //同仁医院 睾丸酮 羊胎素 党 土 腰烟
    
-    Xyzon.Named.Symban //饿鬼.弟弟脏亡仆洒.流阴道抡回.瞧她摸.西拉朵 十加末逆.南美妓源
+    Xyzon.Named.Symbain //饿鬼.弟弟脏亡仆洒.流阴道抡回.瞧她摸.西拉朵 十加末逆.南美妓源
      Embyo.Brother.LamaPlaza.Ktv.Repeated:"then"
   Knocle.Hand
 
