--- a/Rastera/asnic/arrange-beauty/mfs.html
+++ b/Rastera/asnic/arrange-beauty/mfs.html
@@ -9,7 +9,7 @@
 <body>
 
 <snic id="preditor">
-<pre id="editor">
+<pre>
 维金美ArrangeØBeauty
     最终形式：维金MFS (Multiple-Feeling-Ͼexcast) > 维金美 .-ΔΟ□
     唯一不同的就是必须 Physical Contract is a MUST
