--- a/Rastera/asnic/rastera/slept-offsive.html
+++ b/Rastera/asnic/rastera/slept-offsive.html
@@ -72,7 +72,27 @@ Wjcking.Geoscript:Linux.Anydrone:Android
 
 Wjcking.Besideit.Survallence
 
+外遇鱼腥
 
+原因:最后的维赛德
+  周永非?.西周.臀部?:臣送美女，老头
+  婷美.百度?.褒姒 宝石 西拉 
+  旖旎 玫瑰 菏泽 旗帜 气质
+  爱昂尼克:阿芙洛狄特 维赛德.阿狄丽娜 //slepting.html Lines:124s
+  定义.四大：
+  美女
+  妖女.妖艳
+  国色天香
+  现代.会计(普华永道，安永，毕马威，德勤）
+
+  Group.Fight.Diamond(M~K)Enzo.Origin
+  Helleik.Ionic.BeautyUtmost // not one of those
+  Crab.Group.Coregot.Struggle:Should:
+    Utilize.Posion
+    Language learn
+  Should.Not.Sacrefice
+
+因果.今维.安迪 //Underbody
 </pre>
 </body>
 </html>
