--- a/Rastera/asnic/rastera/slept-offsive.html
+++ b/Rastera/asnic/rastera/slept-offsive.html
@@ -80,11 +80,11 @@ Wjcking.Besideit.Survallence
   旖旎 玫瑰 菏泽 旗帜 气质
   爱昂尼克:阿芙洛狄特 维赛德.阿狄丽娜 //slepting.html Lines:124s
   定义.四大：
-  美女
-  妖女.妖艳
-  国色天香
-  现代.会计(普华永道，安永，毕马威，德勤）
-
+    美女
+    妖女.妖艳
+    国色天香
+    现代.会计(普华永道，安永，毕马威，德勤）
+    丑女
   Group.Fight.Diamond(M~K)Enzo.Origin
   Helleik.Ionic.BeautyUtmost // not one of those
   Crab.Group.Coregot.Struggle:Should:
@@ -92,7 +92,13 @@ Wjcking.Besideit.Survallence
     Language learn
   Should.Not.Sacrefice
 
-因果.今维.安迪 //Underbody
+因果.今维.安迪 //Underbody.FairyTale
+
+黑白.滚动
+  安迪.沃特 //Underbody.Waterlized.GotIn
+  伯恩.进入.想什么 //Think.While.HavingSex
+  点蹭 //Slided.Into.Water
+宫格.八封
 </pre>
 </body>
 </html>
