--- a/Rastera/asnic/rastera/slepting.html
+++ b/Rastera/asnic/rastera/slepting.html
@@ -155,9 +155,22 @@ GeoScript.GeoGraphic.Besided
       LooseRage:64-73
   Geo.Ketself.Underworld.Downside
 
-  自然怀孕  宗教神陨 男女受孕
-    同性恋 重力 //gay home
-  人工智能
+  人类.孕育
+    自然怀孕  宗教神陨 男女受孕  人工智能
+
+      宗教.地点.印度
+        男人精液 
+        女人 个数
+
+        告诫世人式神孕 
+        如果用在中国
+          尼姑 和尚
+      定位.池子 
+
+      同性恋 重力 //gay home
+
+  类姒.形态
+
   Ab~so  
     clean.
     I lute //apsoda apisodia
