--- a/Rastera/asnic/rastera/slept-offsive.html
+++ b/Rastera/asnic/rastera/slept-offsive.html
@@ -85,6 +85,11 @@ Wjcking.Besideit.Survallence
     国色天香
     现代.会计(普华永道，安永，毕马威，德勤）
     丑女
+
+    利用与真心喜欢的人
+    //Ass Fart Type Pi 3.14
+  嫉妒.类型
+
   Group.Fight.Diamond(M~K)Enzo.Origin
   Helleik.Ionic.BeautyUtmost // not one of those
   Crab.Group.Coregot.Struggle:Should:
@@ -92,13 +97,27 @@ Wjcking.Besideit.Survallence
     Language learn
   Should.Not.Sacrefice
 
-因果.今维.安迪 //Underbody.FairyTale
+结果.?因果.今维.安迪 //Underbody.FairyTale
 
 黑白.滚动
   安迪.沃特 //Underbody.Waterlized.GotIn
   伯恩.进入.想什么 //Think.While.HavingSex
   点蹭 //Slided.Into.Water
+  履葵 鱼渴
+  @矩阵：陈婷
+    过   沉下
+    破五大现价 停
+    年   鼎上
+  @结束
 宫格.八封
+
+涵术.兴趣 . 关键词：谁 本身就 想过 
+  地球源素 横平树值
+  定义：钨米.中枢神经
+  人类.孕育//slept.html line:158s
+  尼姑 （怎么坐艾) 和尚
+结素.性趣
+
 </pre>
 </body>
 </html>
