--- a/Autodesk/dct-pixar-med.html
+++ b/Autodesk/dct-pixar-med.html
@@ -175,10 +175,18 @@ Cxp.Jav.Jvm.Net //Pi(class)Emdment
     Thread
       String.Each.Notwith.Color
       WorkQueue
-    空间:存放
-    Dct.Mem
-      Static
-      new
+  空间:存放
+  Dct.Mem
+    Static
+    new
+  存放.空间.值
+  
+   #define   smaBIGsma  BIGsmaBIG sma0102sma  BIG2010BIG sma09 BIG09
+
+    string declare a variant for my husband 
+   deletgate   func(first,second,this,a,article,write,about,germany,sorry);
+   public void dylmethod1(do,what,ever,you,say)
+   assmbly internal attribute
 
 Anti.Net.Jav.Jom
 
@@ -202,19 +210,9 @@ Algorith.KolorTimer
   ///summary.dct.hdk.xml
   void nothing();
   [attribute("ding")]
-  void example();
-  
-  void nothing(/**/);
-
-  #define
-    smaBIGsma
-    BIGsmaBIG
-    sma0102sma
-    BIG2010BIG
-    sma09
-    BIG09
-
-    enum Lser
+  void example();  
+  void nothing(/**/);  
+  enum Lser
     {
         [Description("NO1")]
         Lser =0,
