--- a/Rastera/asnic/rastera/atonement.html
+++ b/Rastera/asnic/rastera/atonement.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <title>3-起源论及生命形式Redemption Atone</title>
-    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
+
 </head>
 <body>
-   <pre id="editor">
-&lt;第34天&gt;
+   <pre id="">
+第34天
     The rotation of parallel (paradise) DNA and the source 
     The generation and contraction of white energy source,plus the interweaving with 人(男/女）、动物、地下、水中、仙家、的灵魂 
     avenger revenger punisher 玄学metaphysics 玄幻主义 灵性感知 spiritualism 控制梦境  女狮子沙漏
-&lt;第35天&gt;
+第35天
 The era of wjcking and the five
 [第36天]
     wjcking’kingdom 时空之神 空间之神 昆仑之神 起源学者 Crystalop 
@@ -110,8 +110,7 @@ P:水滴石穿
 
 
    </pre>
-    <script src="../../content/ace-editor/ace.js"></script>
-    <script src="../../content/ace-editor/ace-settings.js"></script>
+
      
 </body>
 </html>
