--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -5,13 +5,12 @@
     <meta charset="utf-8" />
     <title></title>
 
-<link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
 </head>
 <body>
      <div id="ide">
 <pre>
-[2020/9/1x]
-    [Solid-⊙-Vesaid:串斜音]
+2020/9/1x
+    Solid-⊙-Vesaid:串斜音
 
         Do ruai mi fa so la xi do
         Anemo
@@ -19,14 +18,14 @@
         一声平二声扬三声拐弯四声降
             编程
             变成
-    [atmosphere 仇痒蹭]
+    atmosphere 仇痒蹭
         传送技术
         疼合适
         外星人看笑话 
         高等文明地球通讯 与地球战争影响 不作为or what
         家庭 狐囡桐乡 Rotate(人:宰气铅)
         HxW to disposal sperm
-    [ToxicFusionOvaryEgg]
+    ToxicFusionOvaryEgg
         G鸭窗:拖拽不让人贡(sleep)醒
             怨气:西到东
         Doom:毒商 狄上窜(upground sprites)
@@ -36,20 +35,20 @@
                 sex fantasy
                 processed hanmov  
         生物酶 铀 
-    [Disposal sperm and ]
+    Disposal sperm and 
         HxW Toliet tissues sticky
         SpermNumber tail head
-    [DirtyFirst Disgusting1st]
+    DirtyFirst Disgusting1st
         Kolor:阴污垢 //Chaos.金木水火土不会用
     David 张龙 高桥名人 小蹬腿 pants
 
-    [M&m.War.For|Towards]
+    M&m.War.For|Towards
         kaetseof.Ideology.Random.HxW.War
             向心 地下
             for.地盘
             for.宗教
 
-[2020/9/16]
+2020/9/16
     向心力WarCentreAround
 
     维吾尔团结
@@ -125,20 +124,20 @@ Shangwu:9-27
                 Zhengzhichuan hui chuan Thrans 
                 hui dian xian wave mian wei
             jieshu
-        [spell]
-            [800|008]
-            [8000008]
-            [-00000-]
-            [4000008]
-            [030|030]
-        [end]
+        spell
+            800|008
+            8000008
+            -00000-
+            4000008
+            030|030
+        end
         dian lian mian xian chuan:
             handle bashou lian he de wen ti
             nei bu tu xing wen gu de wen ti
             li mian yao zu cheng yi ge tu xing bi ru shuo:san jiao, ling xing
     end
 
-    [draw]
+    draw
               ..
         .00000TT00000：
          000000000000
@@ -146,7 +145,7 @@ Shangwu:9-27
          000000000000
         .0000TT000000：
               ..
-    [end]
+    end
 
     func GetBabyMetric(parameters)
         Raber.Ketself.Pressure(gongchanding,qian,nvren)
@@ -204,8 +203,6 @@ Sex~HardInfo:10-3
 
 </pre>
          </div>
-    <script src="../../content/ace-editor/ace.js"></script>
-    <script src="../../content/ace-editor/ace-settings.js"></script>
 
 
 </body>
