removed .vs debug exe folder

--- a/Autodesk/dct-pixar-med.html
+++ b/Autodesk/dct-pixar-med.html
@@ -181,12 +181,13 @@ Cxp.Jav.Jvm.Net //Pi(class)Emdment
     new
   存放.空间.值
   
-   #define   smaBIGsma  BIGsmaBIG sma0102sma  BIG2010BIG sma09 BIG09
+  string declare a variant for my husband 
+  deletgate func(first,second,this,a,article,write,about,germany,sorry);
+  public void dylmethod1(do,what,ever,you,say)
+  assmbly internal attribute
 
-    string declare a variant for my husband 
-   deletgate   func(first,second,this,a,article,write,about,germany,sorry);
-   public void dylmethod1(do,what,ever,you,say)
-   assmbly internal attribute
+  cxp
+    #define   smaBIGsma  BIGsmaBIG sma0102sma  BIG2010BIG sma09 BIG09
 
 Anti.Net.Jav.Jom
 
