--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -59,27 +59,23 @@ Rhea CKronor
     3的问题
     Absolute Undigable
 
-    函数：[文明~声明体~野蛮|FlatMetric]
-
+    函数：声明体.野蛮.文明
         野蛮：蒙昧、陋习、粗野
-        模板
+        维金.模板
             老掌沟 回龙 启明 公司        
         声明体模板
-            相互经验 Co-
+            相互经验
             
-        生命体文明历史最早演化 
-        Dino：恐龙
-        Group：群 氏 族 部落 酋  奴 主 隶 封 建 //社会
-        Kross.Kause:be dic cause Clothes
-            女: 义~ 同性~单性~双性:男 
-            -----------------------
-                  waterly  remarkable  beauty
-            -----------------------
-            钱.物 权.名声 地盘 宗教影响干预
-            阿尔弗莱德： 气 仇 isolated 交易
-        
-        Group：氏：交易：口角
-        Group：奴隶： 刑法
+      生命体文明历史最早演化  恐龙 // Dino
+        群组：群 族 氏.世袭 部落 酋  奴 主 隶 封 建  //Group
+        源引：人因水 钨银水//Kross:Klause:Kause:be dic cause Clothes
+        人类：女: 义~ 同性~单性~双性:男     
+        美好靓 //waterly  remarkable  beauty         
+        钱.物 权.名声 地盘 \\宗教影响干预
+        阿尔弗莱德： 气 仇  交易 isolated
+        Herde.Kill.Animals.AirFled
+        群组：交易：口角
+        奴隶： 刑法
     结束
 
     函数.疼：启示录
