--- a/Rastera/asnic/access-term/creal.html
+++ b/Rastera/asnic/access-term/creal.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8" />
     <title>赛瑞尔 Creal Surreal</title>
     <script src="../../content/jquery/jquery-3.5.1.min.js"></script>
-    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
 
 <div id="contain" style="height:400px;">
-<pre id="editor">
+<pre>
 
 S§ Reminder for get 目数 secrecy & enTert?Ain
 　　不to美being push slipped(奥丁Odimensional RGB)
@@ -49,7 +48,7 @@ S§ Reminder for get 目数 secrecy & enTert?Ain
 　　Solid.Symbolic
 　　Mind the other type of life form on other planets
 　　Head first what if other Anis (Amani)
-? f?cial:Vision Auditory Olfactory Voice    
+Facial:Vision Auditory Olfactory Voice    
 　　Solid Vesaid  
 　　Tetris =Transblink listenθsudden Sense Shout
 　　Letwesto Look hear taste smell talk
@@ -69,7 +68,7 @@ S§ Reminder for get 目数 secrecy & enTert?Ain
 　　Auoglist Auoglist Serial 
 　　A?Gθlst  
 　　八月
-?PSI-(Physical Rest Ideological Attack Superficial hid)
+PSI-(Physical Rest Ideological Attack Superficial hid)
 　　
 　　?snic decrease for M?i声东击西 August  Auoglist
 　　近而示之远，远而示之近
@@ -116,8 +115,7 @@ Event:
 </div>
 
 <div id="java">
-    <script src="../../content/ace-editor/ace.js"></script>
-    <script src="../../content/ace-editor/ace-settings.js"></script>
+
     <script type="text/javascript">
        // Asnical = 
     </script>
