--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -2,63 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>解释型定义  Sprints</title>
+    <title>术语与定义</title>
     <script src="../../content/jquery/jquery-3.5.1.min.js"></script>
     <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
+<pre id="">
 
-    <div id="contain" style="height: 400px;">
-        <pre id="editor">
-解释型定义  Sprints
 
-  抹布行为
-  新疆问题
-  母乳喂养Dash（docx）
-　　  Tinywhat
-　　  Titholy Kidsuck Manfuck 
-  耶稣反射镜
-　　  Zelda 记吃不记打 “浊粥bj”市
-　　  意识形态刀
-　　  宇宙之刃
-  珠帘不管宏观钱（女的？吃猪肉 被猪吃灵魂的 what if fusion）
-    猪恋不学必失恋 不懂硬伤
-    福气流失
-　　  The priority is how to deal with and entertain
-  Vesaid?=挂面slip of Vesaid!~ zelda 猪?.服务 人学习
-
-  被套洋捞
-　　  Cause
-　　  AEfects by whom
-  归类定义H-Π-W Terminology
-  超时空传送 chronosphere
-　　  Vesaid~ Wesaid Shout Out CrealR~Solid
-　　  Semi-Conduct(is dirty = true)
-　　  //Cymtical Symte? 赛门铁克
-　　  isDirty=宗叫|党派|真|假|是|否
-  chronosphere
-  Aniduration Anicest(bug) transhuman ketself ?
-　　  Anidura balance for 疯阳硼※
-
-动态性定义Dynamic Identical(genetical twin) 
-　　K vos aoz G
-　　Ketself=  Jeokravitational Sentimental Emotion  Fusion CGSEF
-　　Kaitself
-　　K?tse?f
-　　Kaetseof
-　　金石为开
-　　空间
-　　重力方位几何
-　　维度
-　　? 实 世界 录//妓露
-　　Earth ⊕比率 
-　　Creal -⊕- 起世录（从神话走向真实的过程 复仇与获得）
-　　Other planet
 　　
-　　Ket-VθS-s?lf = PSI whenAsnic SnicTime
-　　
+克鲁兹 //Kause
 　　Religious(T|F)
 　　Party (Y|N)
 　　Myth(Solid.SymbolFirst)
@@ -74,7 +29,7 @@
   trannshuman 
   气人
 
-数术语Express※Analytical
+
 
 HΔW(M&m 宏观和微观 HΦW VesaidΔSolid Focused）
 
@@ -116,14 +71,39 @@ TOP
 　　POT
 　　PBC
 　　?Fphysical Biological ?hemical
+Ket:Get
+  Kaetseof(dynamic?.H.W)　
+    K vos aoz G
+    Ketself=  Jeokravitational Sentimental Emotion  Fusion CGSEF
+    Kaitself
+    K?tse?f
+    Kaetseof
+    Ket-VθS-s?lf = PSI whenAsnic SnicTime
+   COF
+    SelfGet Core-Get Your followers
+    Used to follow one's commend then portalled for reasons
 
-Kaetseof(dynamic?.H.W)
- COF
-       SelfGet Core-Get Your followers
-          Used to follow one's commend then portalled for reasons
+    ? Beat out ae hazard PBC FBC ?
+    ?hronosphere
 
-　　? Beat out ae hazard PBC FBC ?
-　　?hronosphere
+  SelfGet Sefket 
+        力有关.Transcolor 调换
+        关于情感as Start 启发性索引的定义
+　　  Index ilyai ilyks iassk(instant emotional index)
+　　  Rhea
+　　  阿尔戈斯?ργο?
+　　  AExsaiz
+　　  “亚哥斯”,或“阿戈斯”。希腊伯罗奔尼撒半岛东北城市，约有5000年的历史。
+    金石为开
+　　空间
+　　重力方位几何
+　　维度
+　　? 实 世界 录//妓露
+　　Earth ⊕比率 
+　　Creal -⊕- 起世录（从神话走向真实的过程 复仇与获得）
+　　Other planet
+Set.Self
+
 PSI 地球上的定义 reminder：Creal
 　　Physical on EARTH (influence on the other planets)
 　　Superficial 伊斯兰教	  Spontaneous
@@ -135,14 +115,6 @@ Creal:reminder?.first
 　　Tetris =Transblink listenθsudden Sense Shout
 　　Letwesto Look hear taste smell talk
 　　
-SelfGet Sefket 
-      力有关.Transcolor 调换
-      关于情感as Start 启发性索引的定义
-　　Index ilyai ilyks iassk(instant emotional index)
-　　Rhea
-　　阿尔戈斯?ργο?
-　　AExsaiz
-　　“亚哥斯”,或“阿戈斯”。希腊伯罗奔尼撒半岛东北城市，约有5000年的历史。
 Solid	(shape index on earth Anti- ）
 　　Auote
 　　SymbolShapeBeauty以人为本（准） 以美为准（本） 阿萨尼亚克维标杆
@@ -175,7 +147,7 @@ KansaiF (是否看见维标准facial and other kingcell(body) part)
 　　　
 Vesaid (Vesaim~)物理解释 区别于 ?赛瑞尔
 　　Voice Symbolic Dimension  Shape  Rigid Body （刚体）
-　　声美Individuate Beauty Benchmark
+　　Individuate Beauty Benchmark //声 美
 　　Cenery 分析
 　　W?said  W?sait
 　　?real Voice
@@ -191,7 +163,7 @@ KansaiF
 　　    when?snic	
 　　    ?snic
 	    Minmax tinywhat 参照 docx
-AE-Fects
+AEFects
 　　Kapa(s)
 　　Hedge?Opposum
 　　Panda?psi or 
@@ -200,54 +172,7 @@ OnceAlways
 
 AJAX Codex
 
-hligaokter
-　　henCEnzic kanSzidor CallJuarez
-  henchunzic kanzidor callhorjie
 
-歌德：Gede
-      ThransLect.TranizRanket
-        Name.JkRowking
-        Geographic.Manchester.Baidu:County^//~郡:因果.忠动(祸澈).冬房(重锅)
-    Nick 
-    Elante 
-    Rhrea //era 纪年 公元
-    Wumi
-
-神话 反射 
-小说 色彩 //TitleShot.FirstAnalytical
-传说
-米伊美
-   EveVision.SuperFacial
-   Intrigue
-   Absorb
-   Impressed
-   like 
-    mutually, self felt unmatched heart pain pushed ,coreket
-从附体 方针 到对接术语节点
-  课中机
-  科狼嗬
-  烟后忘
-    抽完烟以后忘记过程中的点
-  拉稀氏
-  脏
-  溪延揭
-  替他王
-  天几巴
-  百灯箱房 拜登相仿
-  金涟 
-  娘炮 
-  气华
-  林牛克斯
-  扮演者
-  汪阵鱼 淋阵妥套
-  亡胎锅 
-  沃特森 //Watson
-  疼合适
-  眉间尺
-  烟过程忘 //Analytical.Offset
-    重要问题可能流失
-  仰命：天抱怨量
-    不是去上
 </pre>
 
         <div id="compiler">
@@ -263,8 +188,7 @@ hligaokter
     </div>
 
     <div id="java">
-        <script src="../../content/ace-editor/ace.js"></script>
-        <script src="../../content/ace-editor/ace-settings.js"></script>
+
         <script type="text/javascript">
        // Asnical = 
         </script>
