coco-s window body shake

--- a/Rastera/asnic/arrange-beauty/mfs.html
+++ b/Rastera/asnic/arrange-beauty/mfs.html
@@ -43,7 +43,7 @@ sexual organs develop and they become capable of having children
 Impulse
 Gaphole 上下前后左右
 ? 地底人矮小
-[WJCKING.空间]
+WJCKING.空间
 
     VθS SnicTime TimeSnical whenØsnic 时空（之-日-z）缘
     Ketself:时 干 Whensnic ChronoSnical timeMonic Timechronical Techronic
