--- a/Rastera/asnic/rastera/slept-offsive.html
+++ b/Rastera/asnic/rastera/slept-offsive.html
@@ -45,7 +45,7 @@ Uterus
   Bornt.Possessed
 Universe
 
-Wjcking.Geoscript:Linux.Anydrone:Android
+Linux:Wjcking.Geoscript:Anydrone:Android
 
   BodyUpper.Move.Like.HardWhere
       Shoulder.Tiny
