--- a/Rastera/asnic/revenge/sneakwing.html
+++ b/Rastera/asnic/revenge/sneakwing.html
@@ -62,7 +62,8 @@ PusedType
     Rage 被 赛瑞尔 物理?.Ket-VθS-self 
 Embarrassed	
     文明最底限攻击 maybe check PushedType?.useful
-Rosetta like
+
+<!--Rosetta like
     Positive Advantage		
     Toast	AC-M 
     AC-IMG
@@ -76,7 +77,7 @@ Rosetta like
     预测		
     物理 Physical		
     deserved	Anti- distract	
-		
+		-->
 </textarea>
 </body>
 </html>
