--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -59,7 +59,9 @@
     国加层次 
     卫星.党派牵制
     黑社会.层次
-    properganda        
+    properganda  
+      数字优先
+        西金评 先锅盖  你好 李焕珍 票房 50亿
     *军权 国家牵制
         类似于郭文贵事件
     Aliens.KansaiF.OpenSecret
