--- a/Rastera/asnic/arrange-beauty/mfs.html
+++ b/Rastera/asnic/arrange-beauty/mfs.html
@@ -34,7 +34,7 @@
     O
      X  D P
     O
-    Z//没有舌头牙齿顶尖 未必是最后
+    Z//没有舌头牙齿顶尖 最后未必是
 
 Adolescent:阳阴cryecento 日凉靓女神
 Period(SnicTime) of a person's life during H▼W
