--- a/Rastera/asnic/rastera/ketself.html
+++ b/Rastera/asnic/rastera/ketself.html
@@ -180,17 +180,15 @@ Dynasty:Rect.Alfled 9/9AM7:50
             谁来看
     Radioactive.Wrapped(Sun of cell)气铅 Air lead
         Right leg
-    Socialize.KetourSphere   /马恋
+    Socialize.KetourSphere   //马恋
         Ism - Religous Doctrine
-          群:
-          氏:
-          部:
-          落:
-          酋:
-          族:
-          奴:
-          主:
-          隶:
+          形容词.名词：群
+          名词.形容词::氏
+          形容词.名词
+          
+          ：  部落 酋 
+          形容词:族: 
+          形容词：奴主隶:
         ?.Solid.Shape.Symbol~Shape~FlagTimesanical
             十 旗
         CentralRound.SceptreTypehold by whom           
