--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -158,6 +158,46 @@ Kid.Append
   拉丁梅.地峡.烟草.西眼.仙架
   可卡因感勒(马) 冰毒 
 把媳妇.囡镁轴
+
+
+
+莱昂.字
+  关键分析：最小单位 字母大小写 点连 //do tail
+    
+  索莱德.象形 维赛德.拟声
+
+  中国.字.索莱德.偏向
+  美国.字母.维赛德.偏向
+  中东.波浪.维赛德.偏向
+  最小单位与区别：中文.字.偏旁 /Western.Language.Do-Tail:Dotell/  中东.点缀
+结束
+   
+莱昂.定义:词类.艾昂尼克:~沃德
+  关键分析：不是声明体 水 不问
+
+  词类.莱昂.动, 形容
+    词性.动.助动词 形容.拟声词
+  词类.莱昂.洛克梅根:动, 形容
+    词性.动.定义中.. //动.助动词 形容.拟声词
+  词类.人.包含.词性
+结束
+<!--
+词性.涵数..最终定义
+  关健词：问 自己 别人 
+  词性.优先级
+
+  名词.眼睛 动词.观察
+  动名词.优先级
+  身体.宏观:全身:没动 
+  细胞.微观.活动
+  不动 //Renliy.Extrame~ 
+  动词 形容词
+结束.罗列
+
+人类.分组
+  定义 //Typeword
+  词性与磁性
+动物.区分-->
 </pre>
 </body>
 </html>
