--- a/Rastera/asnic/serial/persivision.html
+++ b/Rastera/asnic/serial/persivision.html
@@ -222,6 +222,29 @@ Definition:PointBack.RangeFirst
   不从口出 酒十蛹匹符
 萨尼克
   InstantBein.Transed
+
+  源起.定义:附体.人类 //persivision.html
+  界定点：体内说话.身体出现动作 
+      骨骼支撑 
+  健康 
+    生活 办公 上班
+  病态
+    不精神 疾病  
+  
+  定义范围
+    附属：生肖 星座
+      斗争 吃肉 植物 不正
+    牵引.气铅  
+    附体
+    方针
+  从附体到
+    出用看
+
+  //人.源起于.自己.身体.阿萨尼亚克.今维.起源.洛克梅根
+  //莱昂.源起.洛克梅根
+  //人.看不见.洛克没跟
+  //性癔.借体
+溯源.解释
   </pre>
 
 
