--- a/Rastera/asnic/serenity/serenity.html
+++ b/Rastera/asnic/serenity/serenity.html
@@ -17,15 +17,17 @@
     -->
 <div id="contain" style="height:1000px;">
 <pre id="editor">
+阿萨尼亚克.维金变形记
+  AC时空 光线(能量) 牵引性生命体	
+  塞纳时空之美：感知-记忆-回忆-追忆-灵境（过去时~梦）-意境 
+  颜色Colorful通用语言 Vesaid 表达or What
+  窗外黄米饭
 
-AC时空 光线(能量) 牵引性生命体	
-阿萨尼亚克 塞纳时空之美：感知-记忆-回忆-追忆-灵境（过去时~梦）-意境 
-颜色Colorful通用语言 Vesaid 表达or What
-窗外黄米饭
+  星矢 弓箭 翅膀 性别 五岁 白杨树
+  交通局粪勺焚烧
+  Baimuda三角whirl?.耶稣受难日AD BC 十字军东征 沙拉哈钉　　
 
-星矢 弓箭 翅膀 性别 五岁 白杨树
-　　交通局粪勺焚烧
-　　Baimuda三角whirl?.耶稣受难日AD BC 十字军东征 沙拉哈钉　　
+老掌沟奇遇记
 　　保定医院
 　　Fallout 早晨起来 餐桌过道
 
@@ -53,35 +55,36 @@ AC时空 光线(能量) 牵引性生命体
 回溯.中东    
 
 文明：亚特兰蒂斯
-    被吸走的戒指
-    百慕大三角 冯洋画   
-    铁道贝家鼠院
+  形转.电视
+  被吸走的戒指
+  百慕大三角 冯洋画   
+  铁道贝家鼠院
 　类似于引导 电路板
-    鸭子（Duck 柯达彩色）杜康 酒鬼
+  鸭子（Duck 柯达彩色）杜康 酒鬼
 　Shape past-tense
 
 　现在的阿萨尼亚克 衡量
-    去往西方：幻世录 翼人 白色的翅膀 高洁 picture 空间 穿越 范围 向西 类似于帕特农神庙 圆柱
+  去往西方：幻世录 翼人 白色的翅膀 高洁   空间 穿越 范围 向西 类似于帕特农神庙 圆柱
  回溯
 
 地点.印象.关联.华琛主板
-        去亲戚家政治？希拉来的正方形
-        跟江泽民有关 六四
+      去亲戚家政治？希拉来的正方形
+      跟江泽民有关 六四 王丹
 　　灵境
 　　二子从床上起来要去Work躺着其实不是
 　　80后 （Democrat）
 
-地点：希腊-O-欧洲
-         希腊：Athena kidimage jailfleet->sky 超越 别人高洁(virginal pure texticles) 追求无敌
+地点：希腊/O/欧洲
+  希腊：Athena kidimage JailFleet->sky 超越 别人高洁(virginal pure texticles) 追求无敌
 　　吐鲁番 corridor for realistic
 　　MFS Mutilple Feeling Sexcast
 　　无敌 自由 东西文明 Atlantis?Sitlandia 最美
-        三个梦 Fly Invisible wing  with purity?~love-clandestine being envyed
-        交通局
-　　  哈迪斯 再回来的路上、ACE传来的暗黑之美
-        再回到城建局家属院的那个晚上
-　           Hades.Ace
-        希腊呃罗斯.俄罗斯 ice-what soft ace acm
+    三个梦 Fly Invisible wing  with purity?~love-clandestine being envyed
+    交通局
+　　哈迪斯 再回来的路上、ACE传来的暗黑之美
+    再回到城建局家属院的那个晚上
+　       Hades.Ace
+    希腊呃罗斯.俄罗斯 ice-what soft ace acm
 回溯
 
 地点.意大利.欧洲
@@ -96,26 +99,28 @@ AC时空 光线(能量) 牵引性生命体
     锐波儿.背水澈鑫 //Sorrow Wrappered
 传送.回逆
 
+意境索引
+  天梯：星际楼顶上卫星天线 Celestial 生命体 夏田 海怕？=快结束
+  钓鱼 一条向东流的小溪
+  台湾性梦动期
+  西去Village lake leech woods Direction
+　　  Aniplace //动物聚集之地
+　　  Anicumlate Area
+追溯
 
-天梯：星际楼顶上卫星天线 Celestial 生命体 夏田 海怕？=快结束
-钓鱼 一条向东流的小溪
-台湾性梦动期
-西去Village lake leech woods Direction
-　　Ani动物聚集之地
-　　Anicumlate Area
-Woods 树林
+树林 //Woods
 　　晚上环卫处Refect somethings
 　　Hongkang 拿着雨伞跳下来 自行车
 　　人民公园
 　　台湾吴奇隆 
-　　南方 新疆南山牧场 确实感知的到 however
+　　南方 新疆南山牧场 确实感知的到 
 　　
 　　新疆喀纳斯凉啤酒
 　　新疆山水 干燥气候 阿凡提 周游
 　　新疆召唤去香山的路上 小街桥出口 婀娜尔汗 简森联合
 　　灵境
-　　和西方 类似又有点AncientEast Feeling
- 去往北京后
+　　和西方 类似又有点 //AncientEast Feeling
+ 维金.北漂
 　　哈尔的移动城堡 日本
 　　风车当时朝向南方 连西右上 小房子
 　　符拉迪沃斯托克
@@ -128,9 +133,9 @@ Woods 树林
 　　吐鲁番 corridor for realistic
 　　南山牧场 
 　　生化奇兵
-　　自由 美国
+　　  自由 美国
 
-地点
+地点.分散
 　　Memory  TYPE  in my half ?λ?life heart
         芦苇泥土小道 Orgeinsa 
         郎咸平:芦苇从中右面的多左面少,Mother-Reflection
@@ -180,18 +185,33 @@ Woods 树林
 　　蹬腿裤 跨代背心 锂袜子 shape人 The relationship among in 元素 服饰形状 和人 身高 脸型 神态
  回溯
 
+维金.科技
+  沃德伟来不时梦 
+    张雨生（1966年6月7日一1997年11月12日）
+    蜜蜂
+      How deep is your love
+    调制解调器
+    王正加 //C++
+    鼻儿孩次
+    地理位置.牵连.科委.磕眼//Gman
+  桥步斯.屏锅.飞机.成酒肝：莱特兄弟 //蕊氩艾忑 WR Warner Wright Brother:Brew.Symbian
+  Wjcking.Net 1.0 www.cs-aspx.net
+  Anders Heljsberg .Net 2.0 Generic 3.0 Linq
+   速怨 一张专利聚会
+   回隆 电脑爱好者
+溯源.美国
 
 四方狗跳在小牛子家楼下
 　　Geo:Geographic Geometric Gravity Position
 　　3GP
         
-面对HurtWall
 地点.面对墙
     兔子 任城家属院下边 方位
 　香烟
+    石家庄 搭救 社区 菲湖对
     苗裔他北京亲戚家
+    面对HurtWall
 
-小春儿sense
 
 地点：启明 西柏坡 平山
     地道桥 雨水 黄土色
@@ -210,19 +230,20 @@ Woods 树林
     德克萨斯？：上面天空很蓝 
 回溯
 
-地点：非洲
+地点?:巴西.非洲
     正大综艺 
     双簧管
     催眠师 宇克
     腿被抡 因为老鼠 偷车子 的那个家属院
 回溯
 
-地点指向.巴西
-丁丁历险记
+文明
+  地点指向.巴西
+  丁丁历险记
     瀑布内部 Peach land
     
     阿兹特克 负鼠 复 数 
-回溯
+源起.回溯
 
 Ref-Sense
 　　时空幻境 Fez
