inner rect bing bang

--- a/Autodesk/comsek.html
+++ b/Autodesk/comsek.html
@@ -48,7 +48,7 @@
     Interface.Inner-O-Outter
         Software.Hardware.Plug.Count
 
-*Autmost(EyeVision&Hand)  Anaytical.DataCollect
+*Atmost(EyeVision&Hand)  Anaytical.DataCollect
     Depends on which one is piroity to think about
         user.dct.device.celly..inf.usb-type-c 
         dct.dev.outter.hard.scn.lcd
