--- a/Rastera/asnic/rastera/developer.html
+++ b/Rastera/asnic/rastera/developer.html
@@ -6,6 +6,7 @@
 <body>
 <pre>
 维金.研发:2000-2008 哈佛来福 大学 枪 半条命 
+
 Half-Life:Function
   Half-Life.Gman.SelfKet.Conduct:Vertically
   Harvard-Ralf:Lambda.LetterB:Lamb Lame Da da da Lay Fuseng:Fusion Aa //维金.研发人才:行数:367s
@@ -29,19 +30,20 @@ Half-Life:Function
       gray.color.oldman?.bash
     de_747
       American.HumanSpirte.Personals:
-        Aeroplane.boeing747.NumberSimilar:101 141
+        Aeroplane.ShapeFirst.Wing.boeing747.NumberSimilar:101 141
         Boer~ing.GoldenPeacock.GrudgeMean's GreenCar//和波长 美国人魂
       Wjcking.Childhood.ComicBook.DonaldDuck //吝啬鬼
     as_tundra
       Ak-47:de_747 
 
-  Microsoft.Net.Framework 1.1 HashMap
+  Microsoft.Net.Framework 1.1 HashTable
     Wjcking.Website: www.cs-aspx.net
     Wjcking.Website:www.videa.cn //VirtualIdeal
    Anders Hejlsberg.Net 2.0 Generic 3.0 Linq
    Mojave:Mon-Java
     Hell Jesus burger
     Ham Genis BoerG
+  Plaza.Work.Building.CubeWindow
 Counter-Strike.Procedure
 
 维金.科技 
@@ -65,8 +67,8 @@ Counter-Strike.Procedure
   联邦 软键 哼一下 //Fedual In-var-sitgation
   英语不全.电影.草屋监狱 拉链 性心慌//Wjcking.SchoolAge.ZipperPulled.Felt.SexPhysical
     维赛德.声音//Conduct.Zipper.HadBeing.Pulled:Voice~Weng?. Ats lan tis
-  超级筷打 
-    饭恐惊英  南术梅 忘正正在玩//ING
+    超级筷打 
+      饭恐惊英  南术梅 忘正正在玩//ING
 
 溯源.美国 
 
@@ -75,6 +77,14 @@ Counter-Strike.Procedure
     电源.婚姻.自由与法律，密谋利益
     帝下湿 回忆.失去乐那种功能
 溯源.美国 
+
+维金.出行遇见
+//Wjcking.Was.Wandering.Seened:
+//  HumanKind.SeenFeeled
+//  Normal,Plain,Vague,Express,Remeber,Memorize,Impress,Shock
+//Language.TenseFix
+//  Front.Letter.End
+溯源.回忆.外国人
 
 维金.北漂:2008
 </pre>
