--- a/AutoDesk/analytical/requires.html
+++ b/AutoDesk/analytical/requires.html
@@ -60,6 +60,12 @@ Isoc.Vs2008 类图标 中文 三字码
 手柄
   Camery DNA
 VS Alt VerticalSelect Ket01 Triangle Amendment
+Anyuser:VisionControl.Feeling
+  Dix Gdi Gui Svg Cvs 
+  MultipleVisionDisplayResearch
+  Business.FormKontrol
+  Windows.Desktop.Requires.SolidShape.Anothers
+  *Turkangle //1O1ONE 
 </pre>
 
     
