--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -113,11 +113,11 @@ Jewish.Kolor.Israel.Alfed.God(Je1zus)Megan.Marshea?-Island:Ayeland
     Brother,Friend!=Fiend,Family
 
   Pbc.Chm.Euren.Hole.Hard.SwearOut.Pressured.ExhaustHole.Out 
-  姬中克:挤忠咳.科浪河
-  所罗门之格
-  索罗们之歌
-  梭罗美之鈅
-  锁螺闷支腰:
+  //姬中克:挤忠咳.科浪河
+  //所罗门之格
+  //索罗们之歌
+  //梭罗美之鈅
+  //锁螺闷支腰:
   佐罗//Zorro Zuol    
   Mojave.Hook.Ketub.What
 Young.Chinese.Sheep.Slaughter
