--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -257,12 +257,13 @@ Left 2  23：08 SleepNot
         外界星球联系：
             维金变形记
             老掌沟奇遇记
-            丁丁历险记 地心 
+            丁丁大冒险 地心 
             超自然生命体现象引导-定位到高等文明所在区域 // Persivision
               海平面浮出消失的大陆
               地外星球关联
             维塞尔 纪元文明//=Line:185s
-                Ever-Vengent Henchunsic Kansidor for those   never  unforgettable being overthrowen whater they suffered earth-painfully
+                HenchunsicKansidor for those being unknown, unforgotten and overthrown  whater they suffered earth-painfully
+                Ever-Vengent
                 Discover and locate  the lost Land
                 Guide people that the lost civilization had already reappeared and located somewhere
         消失：地底文明 浮出水面  传送技术 地外文明连接
@@ -304,18 +305,6 @@ Left Recthand-WaveAntiPillar
     回溯.回逆.转置
     关键.消损型.点球-骨-此欧式.渴了喝
 
-    Func.Soft.Hard
-        Andvent:Andev.Easy.Develop.ArchitectInformation.Collect
-            Cxp/Jav
-            Layer:Isoc Isoxk
-            Merge:Isometric
-        Anyuser:Aniuser.VisionControl.Feeling
-            Dix Gdi Gui Svg Cvs 
-            MultipleVisionDisplayResearch
-            Business.FormKontrol
-            Windows.Desktop.Requires.SolidShape.Anothers
-            *Turkangle //1O1ONE 
-    End.AnalyticalBack
 
     克中妓：
         巴西方 耶稣山 气铅  富对面穷 地理 南半球 三角酷 挤雨//nv
