--- a/Rastera/asnic/rastera/developer.html
+++ b/Rastera/asnic/rastera/developer.html
@@ -27,16 +27,30 @@ Half-Life:Function
     de_dust2002
       Hellenic:He.Length.Nic:Hellek.Water.Konduct
     de_prodigy
-      gray.color.oldman?.bash
+      gray.color.oldman.bash.relate.water 
+    as_tundra    
+      Ak-47:de_747 
+      Public Protected Vip-tcp Address
     de_747
       American.HumanSpirte.Personals:
         Aeroplane.ShapeFirst.Wing.boeing747.NumberSimilar:101 141
-        Boer~ing.GoldenPeacock.GrudgeMean's GreenCar//和波长 美国人魂
-      Wjcking.Childhood.ComicBook.DonaldDuck //吝啬鬼
-    as_tundra
-      Ak-47:de_747 
+        Boer~ing.GoldenPeacock.GrudgeMean's GreenCar//和波长 波音 美国人魂 
+      Zero:Figure.Finger 
+        You.Trylize //Radio Trace Active     
+        0x1:Zerone //Stack Stuck Kolor Kontrol Ultra Violate Sound Love
+        Vsd:Vesaid 
+          Vzd:Vsd.Sonic.Sound:Vezaid
+        Vsd:737~747:Vzd 
+          cs_militia.militry
+        Vesaid.Roune:Vezaid.Wrong//半条命.拉姆达:熔入 融人 
+      Wjcking.Childhood.ComicBook.DonaldDuck //吝啬鬼    
 
-  Microsoft.Net.Framework 1.1 HashTable
+
+  Microsoft.Net.Framework 1.1 //delyix.html
+    HashTable.BitType.Offset
+
+    Bach7able.Bypiss^Sit00F-American.History
+
     Wjcking.Website: www.cs-aspx.net
     Wjcking.Website:www.videa.cn //VirtualIdeal
    Anders Hejlsberg.Net 2.0 Generic 3.0 Linq
@@ -61,7 +75,7 @@ Counter-Strike.Procedure
    回隆 电脑爱好者
 溯源.美国
 
-维金.研发人才.损伤与埋没-电工//Technical Shudder G-man
+维金.研发人才.损害与埋没-电工//Technical Shudder G-man
   美国人魂
     十瓦欣哥格 真时地慌烟 lieTrues
   联邦 软键 哼一下 //Fedual In-var-sitgation
@@ -87,6 +101,22 @@ Counter-Strike.Procedure
 溯源.回忆.外国人
 
 维金.北漂:2008
+
+维金.社区.长凳
+  AutoDesk/delyix.html
+  Baidu.Phone~Celly.Russian.baiyeHL
+  Leonic.SignalKome.Vezaid:Bye^hell\let   
+  科朗合
+    *百叶和列
+    *傅里河叶 //BracketLeft
+     [Discrete Fourier Series]
+    *自已比气 //BracketRight
+  克中基
+  Wan^ZeroOne~Own
+    Russian.Vezaid.Wine
+  Figure~Finger.Number.Digts
+    developer.html.lines:43
+今维.阿萨尼克
 </pre>
 </body>
 </html>
