--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -180,7 +180,12 @@ Kid.Append
   词类.人.包含.词性
 结束
 
-
+数字信号翻译
+  Analogue signal //模拟 日志
+  *清晰度与清澈量
+  *模拟 数字 
+    信号 语言 区别
+  Anallogue //肛体 星际信号
 <!--
 词性.涵数..最终定义
   关健词：问 自己 别人 
