--- a/AutoDesk/analytical/delyix.html
+++ b/AutoDesk/analytical/delyix.html
@@ -1,37 +1,41 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title></title>
+		<title>delyix</title>
 	</head>
 	<body>
 <pre>
+Leonik.SignalKomet.komanSignal
+  Solid.Franket.Tryant
+  Zero
+    asm.tbc
+    cpp  #define
+      gdi
+      gui 
+     #def cpp
 
-asm.tbc
-  cpp  #define
-    gdi
-    gui 
-   #def cpp
+    cxp.mil.net//koman = mil
+	    cpu.timer.mem
+	      tree lr rl root time 7 12 24 365 object
+	    vdo.gpu
+	    gdi+
+	    gui+
+	    dll.import
+	    type
+	    gdi+
+	    gui+ 
+    end
 
-  cxp.mil.net//IL = mil
-	  cpu.timer.mem
-	    tree lr rl root time 7 12 24 365 object
-	  vdo.gpu
-	  gdi+
-	  gui+
-	  dll.import
-	  type
-	  gdi+
-	  gui+ 
-  end
+    jav.jvm
 
-  jav.jvm
+    end
+  Wane.Vezaid^One
 
-  end
-asm.tbc.arm
+  
+Leonic.FingerHandle.FigureControl
 
-Kommon Platform Language Runtime Recoon
-
-Runkon:Cxp.Jav.Jvm.Net //Pi(class)Emdment
+Karvan:Common Platform Language Runtime
+Karvan:Cxp.Jav.Jvm.Net //Pi(class)Emdment
   空间
    程序集(结构体（函数（）类名)
    空间名(系统自带)
@@ -73,7 +77,7 @@ Runkon:Cxp.Jav.Jvm.Net //Pi(class)Emdment
   cxp
     #define   smaBIGsma  BIGsmaBIG sma0102sma  BIG2010BIG sma09 BIG09
 
-Platform:Language:Anti.Net.Jav.Jom
+Platform:Language
 
 Cxp.Net.Reconstruct
 ///summary.dct.hdk.xml
@@ -99,9 +103,10 @@ Cxp.Net.Reconstruct
 end.net
 
 @Dynamical.Load
-    Compile DLL 
-    Trynot DLL 
-
+    
+  Compile DLL 
+  Trynot DLL 
+  Koman
     DLLImport
     Assembly.load
 @Flexiable.Call 
@@ -120,9 +125,6 @@ Algorith.Kolor.Tryless.Timer
     function parameter as array
   
 Ayendo
-
-
-
 
 </pre>
 	</body>
