--- a/AutoDesk/analytical/delyix.html
+++ b/AutoDesk/analytical/delyix.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 <pre>
-Leonik.SignalKomet.komanSignal
+Asniyac.Leonik:SignalKomet.komanSignal
   Solid.Franket.Tryant
   Zero
     asm.tbc
@@ -30,9 +30,8 @@ Leonik.SignalKomet.komanSignal
 
     end
   Wane.Vezaid^One
-
   
-Leonic.FingerHandle.FigureControl
+Asnic.Leonic.FingerHandle.FigureControl
 
 Karvan:Common Platform Language Runtime
 Karvan:Cxp.Jav.Jvm.Net //Pi(class)Emdment
