--- a/AutoDesk/analytical/delyix.html
+++ b/AutoDesk/analytical/delyix.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 <pre>
-Asniyac.Leonik:SignalKomet.komanSignal
+Leonik:SignalKomet.komanSignal:Asniyac
   Solid.Franket.Tryant
   Zero
     asm.tbc
@@ -31,10 +31,10 @@ Asniyac.Leonik:SignalKomet.komanSignal
     end
   Wane.Vezaid^One
   
-Asnic.Leonic.FingerHandle.FigureControl
-
+Leonic.FingerHandle.FigureControl
+Karavan:Caravan
 Karvan:Common Platform Language Runtime
-Karvan:Cxp.Jav.Jvm.Net //Pi(class)Emdment
+Karvan:Cxp.Jav.Jvm.Net //Pi(class)Emd-ment
   空间
    程序集(结构体（函数（）类名)
    空间名(系统自带)
@@ -121,8 +121,7 @@ Algorith.Kolor.Tryless.Timer
     delegate func action 
     thread communication
     function pointer 
-    function parameter as array
-  
+    function parameter as array  
 Ayendo
 
 </pre>
