--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -11,7 +11,7 @@
         <>()（）〈〉‹›﹛﹜ ［］《》﹝﹞〔〕{}「」【】︵︶︷︸︿﹀︹︺︽︾﹁﹂﹃﹄︻︼
 第三阶段后
 
-  bottom low middle high Redemption邪毒.?正
+  bottom low middle high Redemption //邪毒.?正
   bottom low middle high sprite
   bottom low middle high Distinguishing characters
   bottom low middle high Atlantis Courier
@@ -24,10 +24,10 @@
   bottom low middle high 从danger wjcking.五大仙家   cansai  ALM 健康 以来问
   bottom low middle high 下体到牵引 起源IF未知 复仇 牵引   东西转制 ALM 
   bottom low middle Lhigh
-  shy-fe-ne-sos Atlantis’tube 
-  小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
-  格兰蒂亚 tele-cfs former life
-  bottom low middle high眼 眉  健康
+    shy-fe-ne-sos Atlantis’tube 
+    小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
+    格兰蒂亚 tele-cfs former life
+  bottom low middle high 眼 眉  健康
 
   bottom low middle high 党 串 Rositta
   bottom low middle high 困 frame
@@ -39,6 +39,7 @@
   bottom low middle high head&hand off bone Sos white-partial
   bottom low middle high DotEarth Communicate Geo.Interface(Ltsz.Pillar)
   bottom low middle high slept-offend
+  bottom low middle high Paest Tenze Aysak Issac
 开始Rast
 
 Napoléon Bonaparte 贵格派 Quicker Quicker
