Revert "Update developer.html"
This reverts commit 9293b3a78b0780ada285fb8d02d56d851ae19707.

--- a/Rastera/asnic/rastera/developer.html
+++ b/Rastera/asnic/rastera/developer.html
@@ -27,10 +27,10 @@ Half-Life:Function
     de_dust2002
       Hellenic:He.Length.Nic:Hellek.Water.Konduct
     de_prodigy
-      gray.color.oldman?.bach
+      gray.color.oldman?.bash
     de_747
       American.HumanSpirte.Personals:
-        Aeroplane.ShapeFirst.Wing.Boeing747.NumberSimilar:101 141
+        Aeroplane.ShapeFirst.Wing.boeing747.NumberSimilar:101 141
         Boer~ing.GoldenPeacock.GrudgeMean's GreenCar//和波长 美国人魂
       Wjcking.Childhood.ComicBook.DonaldDuck //吝啬鬼
     as_tundra
