--- a/Autodesk/comsek.html
+++ b/Autodesk/comsek.html
@@ -96,6 +96,32 @@ Pixel-Array
    *                  墙盆     墙
    *                  墙浴  池墙
    *                  墙墙墙墙墙
+  
+/* 只从上往下 下不上
+*  C struct
+*  C++ 
+* 上下都可以 
+*  C#
+* Java
+* Script a();
+* function b() { alert("b") }
+* function a() {  b();  } 
+
+*interface I { }
+*interface P:I{ }
+*interface N:P,I{ }
+*//中间类 
+*static class Sim{ };
+*class Amid{ };
+*//end
+*class A{ }
+*class B:A { }
+*class C:A { }
+*//不能派生类
+*struct S:A {};
+*struct Q { }; 
+*/
+
 
 asm.tbc
   cpp  #define
