--- a/AutoDesk/analytical/requires.html
+++ b/AutoDesk/analytical/requires.html
@@ -56,7 +56,10 @@ DirectX真实材质墙面
     图形引擎 多个切换 融通
     九宫格 七巧板 老虎机
     Prey Dict Pray Dicked 
-Isoc.Vs2008 类图标 中文 三字码
+Isoc
+  Tile
+  Qt Character
+类图标 中文 三字码
 手柄
   Camery DNA
 VS Alt VerticalSelect Ket01 Triangle Amendment
