--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -71,7 +71,7 @@ Rhea CKronor
           奴 主 隶 封建  //Group        
         源因：人因水 钨银水        
         //Because:maked made loved
-        //BeinKause:sex Cykasted        
+        //KauseBeinged: difference between sex,sexcast, cykaest ?to Camery Symerey
         //Kross:Crossed related to
         //Klause:Some real deal happened
         //Kause:be dic cause Clothes
