--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -83,7 +83,7 @@ Rhea CKronor
            起源保护 钱.物 权.名声 地盘 \\宗教影响干预
         源起.从远古是否概括
 
-        阿尔弗莱德： 介质与实质得不同 介质、实质 中间与气铅 
+        阿尔弗莱德： 介质与实质得不同  中间与气铅 
          起源：词性 磁姓（动与形容 ）         
          介质.形容：人类认知、达成、使用 //动物 吃与地盘          
          实质.命名
@@ -117,7 +117,7 @@ Rhea CKronor
     总结：返回真实度：性：绝对结束
     
     涵数：绝对还原
-        瑞蕾：人ly rely 
+        瑞蕾：Renly rely 
         
         瑞尔还原：地球 外星
         1）古代事件转制：刑 （小人相互反射) 被刑
