being kause orginized

--- a/Rastera/asnic/access-term/possess.html
+++ b/Rastera/asnic/access-term/possess.html
@@ -30,14 +30,14 @@
   烟后忘
     抽完烟以后忘记过程中的点 //Analytical.Offset
     重要问题可能流失
-
+  让黄煌 //明晃晃 削
 Hligaokter
   henCEnzic kanSzidor CallJuarez
   henchunzic kanzidor callhorjie
 
 结术.总结
 
-伯恩史诗
+伯恩.维赛德.史诗
   关键节点.人类 //Renliy.KriticalGeocture:Kint,Rant,Franket
   花仙子?.最蒂层
   忘江泯 ?= 难美 复仇因戴克斯
