--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -11,9 +11,13 @@
 <body>
 <pre id="">
 
+克鲁兹 //heuristic.html Kause 
+  Because:maked made loved
+  KauseBeinged: difference between sex,sexcast, cykaest ?to Camery Symerey
+  Kross:Crossed related to
+  Klause:Some real deal happened
+  Kause:be dic cause Clothes
 
-　　
-克鲁兹 //Kause
 　　Religious(T|F)
 　　Party (Y|N)
 　　Myth(Solid.SymbolFirst)
@@ -28,8 +32,6 @@
   参照 [MFS]维金美-Arrange and Beauty.docx
   trannshuman 
   气人
-
-
 
 HΔW(M&m 宏观和微观 HΦW VesaidΔSolid Focused）
 
