--- a/Rastera/asnic/rastera/developer.html
+++ b/Rastera/asnic/rastera/developer.html
@@ -93,11 +93,11 @@ Counter-Strike.Procedure
 溯源.美国 
 
 维金.出行遇见
-//Wjcking.Was.Wandering.Seened:
-//  HumanKind.SeenFeeled
-//  Normal,Plain,Vague,Express,Remeber,Memorize,Impress,Shock
-//Language.TenseFix
-//  Front.Letter.End
+  @ Wjcking.Was.Wandering.Seened:
+  @   HumanKind.SeenFeeled
+  @   Normal,Plain,Vague,Express,Remeber,Memorize,Impress,Shock
+  @ Language.TenseFix
+  @   Front.Letter.End
 溯源.回忆.外国人
 
 维金.北漂:2008
