--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -69,12 +69,7 @@ Rhea CKronor
       生命体文明历史最早演化  恐龙骨架 // Dino
         群组：群 族 氏.世袭 部落 酋 
           奴 主 隶 封建  //Group        
-        源因：人因水 钨银水        
-        //Because:maked made loved
-        //KauseBeinged: difference between sex,sexcast, cykaest ?to Camery Symerey
-        //Kross:Crossed related to
-        //Klause:Some real deal happened
-        //Kause:be dic cause Clothes
+        源因：人因水 钨银水 //term.html kause.html
           人类：女 男  义~ 同性~单性~双性
           动物：公 母
           未知形态： 人能看见 不能看见 生命形态         
