--- a/Rastera/asnic/rastera/ketself.html
+++ b/Rastera/asnic/rastera/ketself.html
@@ -38,8 +38,7 @@ Fit:T?<-三眼清 2020:8:30
     Timesnic?.中世纪?.连带效应
     阿道夫.席T勒 西忑了.手下.Dice
     尘已(唐僧、唐三藏、陈祎、陈炜).徒弟.命丧黄泉
-    陈祎?.收养:
-    关联:一休出家.避祸
+    陈祎?.收养:关联:一休出家.避祸
 2020-8-31
 
     孟宪伟：梦深陷 赵小↓微 大月氏 突厥 被夺走 地理 危险 被判概念
