--- a/Rastera/asnic/rastera/ketself.html
+++ b/Rastera/asnic/rastera/ketself.html
@@ -117,7 +117,6 @@ timeSnic+2020-9-5
         Shape
         Dipicts
         Totem
-        
     Picture
     Images
     Media?.Virus //历史资料 关于 HelleK.Letter.t 淘
@@ -220,6 +219,7 @@ Dynasty:Rect.Alfled 9/9AM7:50
     21.9:浣熊削
     天鹰夕脏顶 Tibet Mongolia 葬法
     Vesaid:怂辉總 Solid.Shape:国面dang
+  宫本铀 喝瓶氯晓穴 兆蓝 卡片游戏
   </pre>
 </body>
 </html>
