--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -186,6 +186,38 @@ Kid.Append
   *模拟 数字 
     信号 语言 区别
   Anallogue //肛体 星际信号
+
+
+群组与细胞
+  群组：形成 组合 离散  
+    绝断：绝对断开：仅仅一次
+  莱昂尼克:词类与磁性 水细胞 纯固体
+    动：水立方动态固定式 瑞博尔
+      不动解释量：地球 宇宙 其他星球 牵引式纯固体 ，不牵引式纯固体 ,
+    形容
+      颜色
+  洛克梅根
+    人类角度
+    动 形容  名 
+     磁性固定元素
+      不动   名
+        纯固定素不能形容自己
+  今维与地理
+    地球力：吸.水 牵.纯固体  重.水,纯固体
+    今维:直接与力的不同 //Transcolor
+ 宏微顺引：微观 宏观  顺序 索引
+  *关键点：大气层 
+  \\重力关系而围绕着地球的一层混合气体，是地球最外部的气体圈层，包围着海洋和陆地，大气层的厚度大约在1000千米以上，但没有明显的界限
+  \\大气中组分是不稳定的，无论是自然灾害，还是人为影响，会使大气中出现新的物质，
+  \\或某种成分的含量过多地超出了自然状态下的平均值，或某种成分含量减少，都会影响生物的正常发育和生长，给人类造成危害。
+  Earth.Renliy:
+  Geniz
+  Geo graphic
+  Generic Little
+  General  Special // Usual particular
+  Divide Merge
+分裂与融合
+分列式水融合
 <!--
 词性.涵数..最终定义
   关健词：问 自己 别人 
@@ -201,7 +233,7 @@ Kid.Append
 
 人类.分组
   定义 //Typeword
-  词性与磁性
+
 动物.区分-->
 </pre>
 </body>
