cell group geo earth graphic

--- a/Rastera/asnic/serenity/serenity.html
+++ b/Rastera/asnic/serenity/serenity.html
@@ -32,7 +32,7 @@
 　　Fallout 早晨起来 餐桌过道
 
 地点.分散
-    从?.日 储藏区域 黑夜阳台 对接 wmc敬酒  60度老白干 有又要烦的tramp begger
+    从 日 储藏区域 黑夜阳台 对接 污满舱 工程处敬酒  60度老白干 有又要烦的 //tramp begger
     市政工程处街道
     家属院黑色灯光下房子
 　　    灯光 暗能Gll Bugs Incests
@@ -40,16 +40,22 @@
     张冠龙 红色呲水枪 红色的密密麻麻昆虫
     守护者之剑女主角
     栓牛家
-　　    Sisters’Scalling
+      守护者之剑 
+　　  @ Sisters’Scalling
+  东映日本株式会
+  融熔
+  村庄    
+    @ Ani place
+    
 回溯
 
-地点.中东
+意境.中东
     埃及船：人头鹰身 阿伊 法老 黑白电视机 下面的橱柜
     水波浪？=银液    
    
     阿拉伯：沙发罩 上面的骑骆驼的人 //阿喇叭O
     伊朗人：中东在招手 干燥环境 
-        十芝沙
+        十芝沙 //地道桥沙场
         兀果花夜耶 无花果 旁边的沙场  钥汽肺Fly肝厥Feel    
     新疆：喀什噶尔的房子    
 回溯.中东    
@@ -59,8 +65,8 @@
   被吸走的戒指
   百慕大三角 冯洋画   
   铁道贝家鼠院
-　类似于引导 电路板
   鸭子（Duck 柯达彩色）杜康 酒鬼
+　类似于引导 电路板
 　Shape past-tense
 
 　现在的阿萨尼亚克 衡量
@@ -130,7 +136,7 @@
 　　家乐福公司出来
 　　新疆一汽配家属院
 　　新疆 简森联合
-　　吐鲁番 corridor for realistic
+　　吐鲁番 //corridor for realistic
 　　南山牧场 
 　　生化奇兵
 　　  自由 美国
