--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -189,35 +189,78 @@ Kid.Append
 
 
 群组与细胞
-  群组：形成 组合 离散  
-    绝断：绝对断开：仅仅一次
-  莱昂尼克:词类与磁性 水细胞 纯固体
-    动：水立方动态固定式 瑞博尔
-      不动解释量：地球 宇宙 其他星球 牵引式纯固体 ，不牵引式纯固体 ,
-    形容
-      颜色
-  洛克梅根
-    人类角度
-    动 形容  名 
-     磁性固定元素
-      不动   名
-        纯固定素不能形容自己
-  今维与地理
-    地球力：吸.水 牵.纯固体  重.水,纯固体
-    今维:直接与力的不同 //Transcolor
- 宏微顺引：微观 宏观  顺序 索引
+
+群组：形成 组合 分散  
+  绝断离：绝对断开：仅仅一次
+莱昂尼克:词类与磁性 水细胞体 纯固体
+  动：水立方动态固定式 瑞博尔
+    不动解释量：地球 宇宙 其他星球 牵引式纯固体 ，不牵引式纯固体 ,
+  容形
+    颜色
+洛克梅根
+  人类角度
+  动 形容  名 
+    磁性固定元素
+    不动 名
+      纯固定素不能形容自己
+今维与地理
+  地球力：吸.水 牵.纯固体  重.水,纯固体
+  今维:直接与力的不同 //Transcolor
+
+地球与外星际 宏微引顺
+  细胞：形动 @Cellivite Fusion Merge ed
+    动形   @Separate unite combine Divide multiply
+  不动 @Fixit Fixiz Fixed 
+    形动不 @Stable
+
+  不动 @Geo Graphic FlatMetric 
+    Isodec Mesh
+    形容 @Generic Specific
+    动形 @General  Special // Usually particularly 
+  
+人类角度 未知生命体 形态体 动物想象力 
+  @ Renliy:Renlie:Renlay
+      God Sprite Nero 
+      Noawn Gnome.Nome
+      Ketub:Goblet:Goblin.Renlay.Bad
+  @ Atmosphere Graphic
+      Geo-like:myth.olympos.mountain    
+      Aunder.Ketub
+      Underwater
+  @ Rotate.RoleLike
+
+  @ Anyin:Ani Animale
+      Renliy.Undiscover:
+      Anyin.Acquire
+        CellLike
+        Painot.Standout
+          However.LightNeed.WithoutWrapped
+        JellyFish.Flash~Jealious
+      Animal.Think.Atowardiz:
+        EatDrink
+  @ Undiscoveried.Renliy
+      Moley //形态体 树莓？
+      Life  //未知生命体： 人 动物 想 力
+莱昂.洛克梅根.归类
+
+地球中心与层次
+  外星际
+  大气层
+  空中
+  地表.地下
+  水面.里面  
+  中心
+星球.牵引
+
+
+宏微引顺：微观 宏观  顺序 索引 
   *关键点：大气层 
   \\重力关系而围绕着地球的一层混合气体，是地球最外部的气体圈层，包围着海洋和陆地，大气层的厚度大约在1000千米以上，但没有明显的界限
   \\大气中组分是不稳定的，无论是自然灾害，还是人为影响，会使大气中出现新的物质，
   \\或某种成分的含量过多地超出了自然状态下的平均值，或某种成分含量减少，都会影响生物的正常发育和生长，给人类造成危害。
-  Earth.Renliy:
-  Geniz
-  Geo graphic
-  Generic Little
-  General  Special // Usual particular
-  Divide Merge
-分裂与融合
-分列式水融合
+细胞贴附
+  动 @Geniz Prosess //?UnderKetic
+分列与融合 分裂式水融合
 <!--
 词性.涵数..最终定义
   关健词：问 自己 别人 
