group again inner bed-wood dang

--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -260,24 +260,26 @@ Kid.Append
   \\或某种成分的含量过多地超出了自然状态下的平均值，或某种成分含量减少，都会影响生物的正常发育和生长，给人类造成危害。
 细胞贴附
   动 @Geniz Prosess //?UnderKetic
+庞德 @Pond
+  Hellic.Worship.Around.Pond
+  Indo.Sperm.Egg.Pond
+  Mind Spring Daylight Color
+
 分列与融合 分裂式水融合
-<!--
-词性.涵数..最终定义
-  关健词：问 自己 别人 
-  词性.优先级
 
-  名词.眼睛 动词.观察
-  动名词.优先级
-  身体.宏观:全身:没动 
-  细胞.微观.活动
-  不动 //Renliy.Extrame~ 
-  动词 形容词
-结束.罗列
+圆周率与白鳍豚 
+  @Vesaid Vezid 
+  @FeelKint
+  @  Stuck TissuePosition Confine
+臀派 //PI 3.14 Butt Hip AirLead
+群组.内部
+  天启与附体
+  善良解释邪恶 @ 邪恶直射善良
+  关键点：语言 分析历史节点：下毒
 
-人类.分组
-  定义 //Typeword
-
-动物.区分-->
+组群.外部
+线粒体 头颅想汇认亲 //DNA
+//Sexcast.place.object.arrange.alignment
 </pre>
 </body>
 </html>
