--- a/Rastera/asnic/rastera/slept-offsive.html
+++ b/Rastera/asnic/rastera/slept-offsive.html
@@ -72,6 +72,13 @@ Linux:Wjcking.Geoscript:Anydrone:Android
 
 Wjcking.Besideit.Survallence
 
+Linux.HandHead
+  Ancient.Skull
+  
+  Half-Life.Body
+    hlygaokter //testis
+    hormone //东方人不一样
+Liuix.HighHeel
 外遇鱼腥
 
 原因:最后的维赛德
