--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -260,6 +260,7 @@ Kid.Append
   \\或某种成分的含量过多地超出了自然状态下的平均值，或某种成分含量减少，都会影响生物的正常发育和生长，给人类造成危害。
 细胞贴附
   动 @Geniz Prosess //?UnderKetic
+    
 庞德 @Pond
   Hellic.Worship.Around.Pond
   Indo.Sperm.Egg.Pond
@@ -276,7 +277,8 @@ Kid.Append
   天启与附体
   善良解释邪恶 @ 邪恶直射善良
   关键点：语言 分析历史节点：下毒
-
+  网讲皿 //Handless
+  Geniz.Jealous
 组群.外部
 线粒体 头颅想汇认亲 //DNA
 //Sexcast.place.object.arrange.alignment
