--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -62,7 +62,7 @@
   Fond.Mantal
 赛瑞尔//Serial
 
-Nox.Norton.Vknet  
+Nox.Norton.VK
   Geosprite(Javascript.Jeopardize.Graphic)Besatic 
     //贝塞斯达 辐射 Bethesida
     //老掌沟：术鼠 金属 十 牛 液塑
@@ -114,6 +114,7 @@ Jewish.Kolor.Israel.Alfed.God(Je1zus)Megan.Marshea?-Island:Ayeland
 
   Pbc.Chm.Euren.Hole.Hard.SwearOut.Pressured.ExhaustHole.Out 
   //姬中克:挤忠咳.科浪河
+  //所罗门地钥匙
   //所罗门之格
   //索罗们之歌
   //梭罗美之鈅
@@ -190,7 +191,7 @@ Kid.Append
 
 宏微引顺：微观 宏观  顺序 索引 
   *关键点：大气层 
-  \\重力关系而围绕着地球的一层混合气体，是地球最外部的气体圈层，包围着海洋和陆地，大气层的厚度大约在1000千米以上，但没有明显的界限
+  \\重力 关系而围绕着地球的一层混合气体，是地球最外部的气体圈层，包围着海洋和陆地，大气层的厚度大约在1000千米以上，但没有明显的界限
   \\大气中组分是不稳定的，无论是自然灾害，还是人为影响，会使大气中出现新的物质，
   \\或某种成分的含量过多地超出了自然状态下的平均值，或某种成分含量减少，都会影响生物的正常发育和生长，给人类造成危害。
 
@@ -224,16 +225,24 @@ Kid.Append
     形容 @Generic Specific
     动形 @General  Special // Usually particularly 
   
-人类角度 未知生命体 形态体 动物想象力 
-  @ Renliy:Renlie:Renlay
-      God Sprite Nero 
-      Noawn Gnome.Nome
-      Ketub:Goblet:Goblin.Renlay.Bad
-  @ Atmosphere Graphic
-      Geo-like:myth.olympos.mountain    
-      Aunder.Ketub
+人类角度:未知生命体 形态体 动物想象力 
+  @Sprite.Renliy:Renlie:Renlay
+      EyeVision.Vertical
+        God
+          Religious
+          Air-Middle,Atmosphere,Outside.Earth
+        Sprite
+          Horizontal.Ground.Mountain
+        Nomeic          
+          Gnome.Ketub:Goblet:Goblin.Renlay.Bad
+      BodyPart.Feel
+
+    GeoSprite.Being.Rotate
+      Atmosphere Graphic
+      Geo-like:myth.olympus.mountain    
+      Undergound
       Underwater
-    Rotate.RoleLike
+    Renlie.Rotate
 
   @ Anni:Ani Animale
       Renliy.Undiscover:
@@ -254,9 +263,9 @@ Kid.Append
   大气层
   空中
   地表.地下
-  水面.里面  
+  水面.水下
   中心
-外星际.牵引
+星际.牵引
 
 
 细胞贴附
