--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -188,16 +188,10 @@ Kid.Append
   Anallogue //肛体 星际信号
 
 
-宏微引顺：微观 宏观  顺序 索引 
-  *关键点：大气层 
-  \\重力关系而围绕着地球的一层混合气体，是地球最外部的气体圈层，包围着海洋和陆地，大气层的厚度大约在1000千米以上，但没有明显的界限
-  \\大气中组分是不稳定的，无论是自然灾害，还是人为影响，会使大气中出现新的物质，
-  \\或某种成分的含量过多地超出了自然状态下的平均值，或某种成分含量减少，都会影响生物的正常发育和生长，给人类造成危害。
-
 群组与细胞
 
 群组：形成 组合 分散  
-  人类角度.绝断离：绝对断开：仅仅一次
+  绝断离：绝对断开：仅仅一次
 莱昂尼克:词类与磁性 水细胞体 纯固体
   动：水立方动态固定式 瑞博尔
     不动解释量：地球 宇宙 其他星球 牵引式纯固体 ，不牵引式纯固体 ,
@@ -213,7 +207,7 @@ Kid.Append
   地球力：吸.水 牵.纯固体  重.水,纯固体
   今维:直接与力的不同 //Transcolor
 
-宏微引顺
+地球与外星际 宏微引顺
   细胞：形动 @Cellivite Fusion Merge ed
     动形   @Separate unite combine Divide multiply
   不动 @Fixit Fixiz Fixed 
@@ -233,9 +227,9 @@ Kid.Append
       Geo-like:myth.olympos.mountain    
       Aunder.Ketub
       Underwater
-    Rotate.RoleLike
+  @ Rotate.RoleLike
 
-  @ Anni:Ani Animale
+  @ Anyin:Ani Animale
       Renliy.Undiscover:
       Anyin.Acquire
         CellLike
@@ -256,9 +250,14 @@ Kid.Append
   地表.地下
   水面.里面  
   中心
-外星际.牵引
+星球.牵引
 
 
+宏微引顺：微观 宏观  顺序 索引 
+  *关键点：大气层 
+  \\重力关系而围绕着地球的一层混合气体，是地球最外部的气体圈层，包围着海洋和陆地，大气层的厚度大约在1000千米以上，但没有明显的界限
+  \\大气中组分是不稳定的，无论是自然灾害，还是人为影响，会使大气中出现新的物质，
+  \\或某种成分的含量过多地超出了自然状态下的平均值，或某种成分含量减少，都会影响生物的正常发育和生长，给人类造成危害。
 细胞贴附
   动 @Geniz Prosess //?UnderKetic
     
@@ -272,17 +271,15 @@ Kid.Append
 圆周率与白鳍豚 
   @Vesaid Vezid 
   @FeelKint
-    Stuck TissuePosition Confine
+  @  Stuck TissuePosition Confine
 臀派 //PI 3.14 Butt Hip AirLead
-
 群组.内部
   天启与附体
-  善良解释邪恶:邪恶直射善良
+  善良解释邪恶 @ 邪恶直射善良
   关键点：语言 分析历史节点：下毒
-  忘江皿 //Handless
-  //Geniz.Jealous
+  网讲皿 //Handless
+  Geniz.Jealous
 组群.外部
-
 线粒体 头颅想汇认亲 //DNA
 //Sexcast.place.object.arrange.alignment
 </pre>
